--- a/connectedin/usuarios/templates/login.html
+++ b/connectedin/usuarios/templates/login.html
@@ -20,6 +20,6 @@
                 Por favor, verifique o Email e/ou Senha informados
             </div>
         {% endif %}
-        <a href="{% url 'registrar' %}" >registre-se</a>
+        <a href="{% url 'registrar' %}">Registre-se</a>
     </form>
 {% endblock body %}
